// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`News page > renders correctly 1`] = `
<main>
  <div
    class="docs-header p-5 text-center"
  >
    <div
      class="container"
    >
      <h1>
        News & Events
      </h1>
      <div
        class="lead"
      >
        Follow the latest updates from the Eclipse Adoptium Project
      </div>
      <div
        class="main-search-box pt-3 d-block mx-auto"
      />
    </div>
  </div>
  <section
    class="text-center container-flex"
  >
    <div
      class="row py-lg-5 w-75 m-auto"
    >
      <div
        class="row pt-5"
      >
        <div
          class="col-md-5 text-start"
        >
          <h2>
            News
          </h2>
          <div>
            <p
              class="h5"
            >
              <a
                href="https://link_mock/"
                rel="noreferrer"
                target="_blank"
              >
                title_mock
              </a>
            </p>
            <p
              class="m-0 fw-bold"
            >
              1 January 2020
            </p>
            <p
              class="text-muted lh-sm"
            >
              body_mock
            </p>
          </div>
          <nav
            aria-label="pagination navigation"
            class="MuiPagination-root MuiPagination-text pt-3 d-flex justify-content-center css-1xra8g6-MuiPagination-root"
          >
            <ul
              class="MuiPagination-ul css-1c5o7vy-MuiPagination-ul"
            >
              <li>
                <button
                  aria-label="Go to first page"
                  class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                    data-testid="FirstPageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                    />
                  </svg>
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to previous page"
                  class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-disabled MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                    data-testid="NavigateBeforeIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                </button>
              </li>
              <li>
                <button
                  aria-current="page"
                  aria-label="page 1"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular Mui-selected MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  1
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to page 2"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  2
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to page 3"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  3
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to page 4"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  4
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to page 5"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  5
                </button>
              </li>
              <li>
                <div
                  class="MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-ellipsis css-btxnvc-MuiPaginationItem-root"
                >
                  …
                </div>
              </li>
              <li>
                <button
                  aria-label="Go to page 11"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-page css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  11
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to next page"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-previousNext css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                    data-testid="NavigateNextIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </button>
              </li>
              <li>
                <button
                  aria-label="Go to last page"
                  class="MuiButtonBase-root MuiPaginationItem-root MuiPaginationItem-sizeMedium MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-firstLast css-1l5xwdx-MuiButtonBase-root-MuiPaginationItem-root"
                  tabindex="0"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-8uzxat-MuiSvgIcon-root-MuiPaginationItem-icon"
                    data-testid="LastPageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                    />
                  </svg>
                </button>
              </li>
            </ul>
          </nav>
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/eclipse/community-news"
            rel="noreferrer"
            target="_blank"
          >
            View all
          </a>
          |
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/node/add/news"
            rel="noreferrer"
            target="_blank"
          >
            Submit news
          </a>
        </div>
        <div
          class="col-md-1"
        />
        <div
          class="col-md-6"
        >
          <h2>
            Upcoming Events
          </h2>
          <ul
            class="MuiTimeline-root MuiTimeline-positionAlternate css-i6popu-MuiTimeline-root"
          >
            <li
              class="MuiTimelineItem-root MuiTimelineItem-positionAlternate MuiTimelineItem-missingOppositeContent css-423au0-MuiTimelineItem-root"
            >
              <div
                class="MuiTimelineSeparator-root css-1muvgbz-MuiTimelineSeparator-root"
              >
                <span
                  class="MuiTimelineDot-root MuiTimelineDot-filled MuiTimelineDot-filledGrey css-v6mo1y-MuiTimelineDot-root"
                />
                <span
                  class="MuiTimelineConnector-root css-1ami7lv-MuiTimelineConnector-root"
                />
              </div>
              <div
                class="MuiTypography-root MuiTypography-body1 MuiTimelineContent-root MuiTimelineContent-positionAlternate css-l73f8l-MuiTypography-root-MuiTimelineContent-root"
              >
                <p
                  class="text-muted lh-1"
                >
                  1 January 2020
                </p>
                <p
                  class="h6 fw-bold"
                >
                  <a
                    href="https://infolink_mock/"
                    rel="noreferrer"
                    target="_blank"
                  >
                    title_mock
                  </a>
                </p>
                <p
                  class="fw-light lh-1"
                  style="overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 5;"
                />
              </div>
            </li>
          </ul>
          <a
            class="px-2"
            href="https://events.eclipse.org/"
            rel="noreferrer"
            target="_blank"
          >
            View all
          </a>
          |
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/node/add/events"
            rel="noreferrer"
            target="_blank"
          >
            Submit an event
          </a>
        </div>
      </div>
    </div>
  </section>
</main>
`;

exports[`News page > renders spinner when news not loaded 1`] = `
<main>
  <div
    class="docs-header p-5 text-center"
  >
    <div
      class="container"
    >
      <h1>
        News & Events
      </h1>
      <div
        class="lead"
      >
        Follow the latest updates from the Eclipse Adoptium Project
      </div>
      <div
        class="main-search-box pt-3 d-block mx-auto"
      />
    </div>
  </div>
  <section
    class="text-center container-flex"
  >
    <div
      class="row py-lg-5 w-75 m-auto"
    >
      <div
        class="row pt-5"
      >
        <div
          class="col-md-5 text-start"
        >
          <h2>
            News
          </h2>
          <span
            aria-label="loading spinner"
            class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1wxecgq-MuiCircularProgress-root"
            role="progressbar"
            style="width: 40px; height: 40px;"
          >
            <svg
              class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
              viewBox="22 22 44 44"
            >
              <circle
                class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
                cx="44"
                cy="44"
                fill="none"
                r="20.2"
                stroke-width="3.6"
              />
            </svg>
          </span>
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/eclipse/community-news"
            rel="noreferrer"
            target="_blank"
          >
            View all
          </a>
          |
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/node/add/news"
            rel="noreferrer"
            target="_blank"
          >
            Submit news
          </a>
        </div>
        <div
          class="col-md-1"
        />
        <div
          class="col-md-6"
        >
          <h2>
            Upcoming Events
          </h2>
          <ul
            class="MuiTimeline-root MuiTimeline-positionAlternate css-i6popu-MuiTimeline-root"
          />
          <a
            class="px-2"
            href="https://events.eclipse.org/"
            rel="noreferrer"
            target="_blank"
          >
            View all
          </a>
          |
          <a
            class="px-2"
            href="https://newsroom.eclipse.org/node/add/events"
            rel="noreferrer"
            target="_blank"
          >
            Submit an event
          </a>
        </div>
      </div>
    </div>
  </section>
</main>
`;
